# clipi

./: README.md  pyproject.toml
src/: cli.py
