[tool.poetry]
name = "clipi"
version = "0.1.0"
description = "A basic project to enhance clis"
authors = ["pentabeit <codingchameleon0@gmail.com>"]
exclude = ["README.md", "useClient.md", "logs/**/*"]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
