[tool.poetry]
name = "clipi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
exclude = ["README.md", "useClient.md", "logs/**/*"]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
